Fixed project title spacing

--- a/styles/FeatureSection/FeatureSectionProjectPost.module.css
+++ b/styles/FeatureSection/FeatureSectionProjectPost.module.css
@@ -7,7 +7,7 @@
   font-size: 1.25rem;
   font-weight: 500;
   margin: 0;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.25rem;
 }
 
 .excerpt {
@@ -22,18 +22,18 @@
 
 .headerContainer {
   display: flex;
-  align-items: center;
 }
 
 .appIconContainer {
+  display: flex;
+  justify-content: space-around;
   margin-right: 0.75rem;
 }
 
 .titleContainer {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  height: 100%;
+  justify-content: space-evenly;
 }
 
 .tagList {
